# structmd

./: .gitignore  Cargo.toml  ERROR-HANDLING.md  README.md  SME.md  error-handling.md  specification.md
structmd/: Cargo.toml
structmd-codegen/: Cargo.toml  LICENSE  README.md
structmd-codegen/src/: lib.rs  main.rs
structmd-codegen/tests/: codegen_test.rs
structmd-errors/: Cargo.toml
structmd-errors/src/: lib.rs
structmd-integration/: Cargo.toml  build.rs
structmd-integration/fixtures/invalid/: missing-command.workflow.md
structmd-integration/fixtures/valid/: hello.workflow.md  multi-step.workflow.md
structmd-integration/schema/: workflow.schema.md
structmd-integration/src/: main.rs
structmd-integration/tests/: integration.rs
structmd-lint/: Cargo.toml  README.md
structmd-lint/src/: main.rs  validate.rs
structmd-lint/tests/: compliance.rs
structmd/src/: errors.rs  lib.rs  parse.rs  schema.rs  validate.rs
tests/fixtures/invalid/: bad-bool.errors.md  bad-bool.md  bad-bool.schema.md  bad-cron.errors.md  bad-cron.md  bad-cron.schema.md  bad-enum.errors.md  bad-enum.md  bad-enum.schema.md  missing-property.errors.md  missing-property.md  missing-property.schema.md  missing-prose.errors.md  missing-prose.md  missing-prose.schema.md  missing-section.errors.md  missing-section.schema.md
tests/fixtures/valid/: code-blocks.md  code-blocks.schema.md  lists.md  lists.schema.md  multi-h1.md  multi-h1.schema.md  nested-h3.md  nested-h3.schema.md  optional-h1.md  optional-h1.schema.md  prose.md  prose.schema.md  scoped-leak.md  scoped-leak.schema.md  scoped-types.md  scoped-types.schema.md  simple.md  simple.schema.md  tables.md  tables.schema.md
