[workspace]
members = [
    "structmd",
    "structmd-lint",
    "structmd-codegen",
    "structmd-integration",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Gemelai/structmd"
authors = ["Stephen Roylance <sdr@sroylance.com>", "Susan Roylance"]

[workspace.dependencies]
structmd = { path = "structmd", version = "0.1.0" }
structmd-codegen = { path = "structmd-codegen", version = "0.1.0" }
