[package]
name = "structmd-codegen"
description = "Generate typed Rust config loaders from structured markdown schemas"
readme = "README.md"
keywords = ["markdown", "schema", "codegen", "config"]
categories = ["development-tools::build-utils"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
structmd = { workspace = true }
