[package]
name = "structmd-integration"
description = "Integration test: minimal workflow engine built on structmd"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "structmd-workflow"
path = "src/main.rs"

[dependencies]
structmd = { workspace = true }

[build-dependencies]
structmd-codegen = { workspace = true }

[dev-dependencies]
tempfile = "3"
