[package]
name = "structmd-lint"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Schema-driven linter for structured markdown files"

[[bin]]
name = "structmd-lint"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
structmd = { path = "../structmd" }
