[package]
name = "structmd"
description = "Structured markdown — parser and schema loader with grammar-driven validation"
readme = "../README.md"
keywords = ["markdown", "schema", "validation", "config", "parser"]
categories = ["parser-implementations", "config"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
